--- a/Cat's Adventure/Cat's Adventure.vcxproj.filters
+++ b/Cat's Adventure/Cat's Adventure.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Spike.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerGUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Spike.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerGUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
