--- a/Cat's Adventure/Cat's Adventure.vcxproj
+++ b/Cat's Adventure/Cat's Adventure.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerGUI.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Spike.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -176,6 +177,7 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerGUI.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="Shield.h" />
     <ClInclude Include="Spike.h" />
     <ClInclude Include="stdafx.h" />
